--- a/Thred/ProfileViews/ProfileHeaderView.xib
+++ b/Thred/ProfileViews/ProfileHeaderView.xib
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -10,34 +11,34 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ProfileHeaderView" customModule="Thred" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" interfaceStyle="light" id="0N2-d2-UYm" customClass="ProfileHeaderView" customModule="Thred" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="1046" height="504"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="314"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="p6k-MY-udt">
-                    <rect key="frame" x="10" y="138.5" width="1026" height="355.5"/>
+                    <rect key="frame" x="10" y="54.333333333333329" width="355" height="249.66666666666669"/>
                     <color key="backgroundColor" name="ProfileMask"/>
                 </view>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default_DP.png" translatesAutoresizingMaskIntoConstraints="NO" id="EhI-4W-1kM">
-                    <rect key="frame" x="395" y="10" width="256.5" height="256.5"/>
+                    <rect key="frame" x="143" y="10" width="89" height="88.666666666666671"/>
                     <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="EhI-4W-1kM" secondAttribute="height" multiplier="1:1" id="hbc-Ik-9QC"/>
                     </constraints>
                 </imageView>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="jzB-Bu-MVL">
-                    <rect key="frame" x="138.5" y="276.5" width="769.5" height="197.5"/>
+                    <rect key="frame" x="54.333333333333343" y="108.66666666666667" width="266.33333333333326" height="175.33333333333331"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="0qx-Ji-Vsg">
-                            <rect key="frame" x="0.0" y="0.0" width="769.5" height="35"/>
+                            <rect key="frame" x="0.0" y="0.0" width="266.33333333333331" height="35"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&quot;Full Name&quot;" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.75" translatesAutoresizingMaskIntoConstraints="NO" id="fP5-xX-6Mz">
-                                    <rect key="frame" x="0.0" y="0.0" width="769.5" height="20"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="266.33333333333331" height="20"/>
                                     <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&quot;@username&quot;" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.75" translatesAutoresizingMaskIntoConstraints="NO" id="Dak-Hv-czS">
-                                    <rect key="frame" x="0.0" y="20" width="769.5" height="15"/>
+                                    <rect key="frame" x="0.0" y="19.999999999999986" width="266.33333333333331" height="15"/>
                                     <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="14"/>
                                     <color key="textColor" systemColor="secondaryLabelColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
                                     <nil key="highlightedColor"/>
@@ -49,7 +50,7 @@
                             </constraints>
                         </stackView>
                         <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" text="&quot;Bio&quot;" textAlignment="center" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mgd-gl-KIz">
-                            <rect key="frame" x="0.0" y="45" width="769.5" height="82.5"/>
+                            <rect key="frame" x="0.0" y="44.999999999999986" width="266.33333333333331" height="60.333333333333329"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="25" id="AdQ-RT-hLp"/>
@@ -59,10 +60,10 @@
                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                         </textView>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4ka-kY-j36">
-                            <rect key="frame" x="0.0" y="137.5" width="769.5" height="60"/>
+                            <rect key="frame" x="0.0" y="115.33333333333331" width="266.33333333333331" height="60"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hrF-NM-2Mo">
-                                    <rect key="frame" x="0.0" y="7.5" width="769.5" height="45"/>
+                                    <rect key="frame" x="0.0" y="7.6666666666666572" width="266.33333333333331" height="45"/>
                                     <color key="backgroundColor" systemColor="quaternarySystemFillColor" red="0.4549019608" green="0.4549019608" blue="0.50196078430000002" alpha="0.080000000000000002" colorSpace="custom" customColorSpace="sRGB"/>
                                     <state key="normal" title="Button">
                                         <color key="titleColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -108,7 +109,7 @@
                 <outlet property="userContentView" destination="p6k-MY-udt" id="iPU-7e-qGR"/>
                 <outlet property="usernameLbl" destination="Dak-Hv-czS" id="iIs-S9-t3M"/>
             </connections>
-            <point key="canvasLocation" x="113.04347826086958" y="-218.97321428571428"/>
+            <point key="canvasLocation" x="-424.80000000000001" y="-289.65517241379314"/>
         </view>
     </objects>
     <resources>
