--- a/Thred/Chat & Text Cells/Group Chat Cells/Picture Cells/ProductCell.xib
+++ b/Thred/Chat & Text Cells/Group Chat Cells/Picture Cells/ProductCell.xib
@@ -5,6 +5,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
+        <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -131,11 +132,11 @@
                     <view autoresizesSubviews="NO" clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bn9-KI-nXD">
                         <rect key="frame" x="0.0" y="50" width="375" height="534"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="FXT-jc-Xcq">
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="FXT-jc-Xcq">
                                 <rect key="frame" x="10" y="395" width="355" height="139"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="v6d-vm-nET">
-                                        <rect key="frame" x="0.0" y="0.0" width="355" height="98.666666666666671"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="355" height="130.66666666666666"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="TO4-oZ-Ckh">
                                                 <rect key="frame" x="0.0" y="0.0" width="355" height="35"/>
@@ -178,7 +179,7 @@
                                                 </subviews>
                                             </stackView>
                                             <textView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" verticalHuggingPriority="1000" bounces="NO" scrollEnabled="NO" editable="NO" text="&quot;Description&quot;" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9vJ-jq-xDm">
-                                                <rect key="frame" x="0.0" y="65" width="355" height="33.666666666666657"/>
+                                                <rect key="frame" x="0.0" y="65" width="355" height="65.666666666666686"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                 <color key="textColor" systemColor="tertiaryLabelColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <fontDescription key="fontDescription" name="NexaW01-Heavy" family="NexaW01-Heavy" pointSize="15"/>
