--- a/Thred/NotificationCell.xib
+++ b/Thred/NotificationCell.xib
@@ -37,14 +37,13 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vji-mz-5Jx">
                                         <rect key="frame" x="10" y="17.666666666666668" width="225" height="20.000000000000004"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&quot;Notification Message&quot;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="puQ-i9-hhY">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&quot;Notification Message&quot;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.69999999999999996" translatesAutoresizingMaskIntoConstraints="NO" id="puQ-i9-hhY">
                                                 <rect key="frame" x="0.0" y="0.0" width="225" height="20"/>
                                                 <fontDescription key="fontDescription" name="NexaW01-Heavy" family="NexaW01-Heavy" pointSize="15"/>
                                                 <color key="textColor" systemColor="secondaryLabelColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                         <constraints>
                                             <constraint firstItem="puQ-i9-hhY" firstAttribute="leading" secondItem="vji-mz-5Jx" secondAttribute="leading" id="GHf-wF-oeb"/>
                                             <constraint firstAttribute="trailing" secondItem="puQ-i9-hhY" secondAttribute="trailing" id="JFw-32-yCg"/>
@@ -54,7 +53,6 @@
                                         </constraints>
                                     </view>
                                 </subviews>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <constraints>
                                     <constraint firstItem="vji-mz-5Jx" firstAttribute="centerX" secondItem="2Tb-wy-cw2" secondAttribute="centerX" id="7NR-Mi-e4G"/>
                                     <constraint firstItem="vji-mz-5Jx" firstAttribute="leading" secondItem="2Tb-wy-cw2" secondAttribute="leading" constant="10" id="D9V-vt-Lf8"/>
