--- a/Thred/Chat & Text Cells/Group Chat Cells/Picture Cells/ProductCell.xib
+++ b/Thred/Chat & Text Cells/Group Chat Cells/Picture Cells/ProductCell.xib
@@ -16,11 +16,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="PictureProduct" rowHeight="584" id="qto-th-NSw" customClass="ProductCell" customModule="Thred" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="584"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="PictureProduct" rowHeight="568" id="qto-th-NSw" customClass="ProductCell" customModule="Thred" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="568"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="qto-th-NSw" id="ON4-vW-AVU">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="584"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="568"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kwj-hw-CJE">
@@ -98,7 +98,7 @@
                                     <constraint firstAttribute="width" secondItem="oeL-mu-0pN" secondAttribute="height" multiplier="1:1" id="OKv-0a-57W"/>
                                 </constraints>
                                 <color key="tintColor" name="LoadingColor"/>
-                                <state key="normal" image="ellipsis.circle"/>
+                                <state key="normal" image="ellipsis"/>
                                 <connections>
                                     <action selector="openOptionMenu:" destination="qto-th-NSw" eventType="touchUpInside" id="T0c-1T-QhW"/>
                                 </connections>
@@ -130,13 +130,13 @@
                         </constraints>
                     </view>
                     <view autoresizesSubviews="NO" clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bn9-KI-nXD">
-                        <rect key="frame" x="0.0" y="50" width="375" height="534"/>
+                        <rect key="frame" x="0.0" y="50" width="375" height="518"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="FXT-jc-Xcq">
-                                <rect key="frame" x="10" y="395" width="355" height="139"/>
+                                <rect key="frame" x="10" y="395" width="355" height="123"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="v6d-vm-nET">
-                                        <rect key="frame" x="0.0" y="0.0" width="355" height="130.66666666666666"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="355" height="114.66666666666667"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="TO4-oZ-Ckh">
                                                 <rect key="frame" x="0.0" y="0.0" width="355" height="35"/>
@@ -179,16 +179,29 @@
                                                 </subviews>
                                             </stackView>
                                             <textView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" verticalHuggingPriority="1000" bounces="NO" scrollEnabled="NO" editable="NO" text="&quot;Description&quot;" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9vJ-jq-xDm">
-                                                <rect key="frame" x="0.0" y="65" width="355" height="65.666666666666686"/>
+                                                <rect key="frame" x="0.0" y="65" width="355" height="24.666666666666671"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                 <color key="textColor" systemColor="tertiaryLabelColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <fontDescription key="fontDescription" name="NexaW01-Heavy" family="NexaW01-Heavy" pointSize="15"/>
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                             </textView>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Asy-BI-E8W">
+                                                <rect key="frame" x="0.0" y="94.666666666666629" width="355" height="20"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="20" id="uOn-zE-n85"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" name="NexaW01-Heavy" family="NexaW01-Heavy" pointSize="14"/>
+                                                <state key="normal" title="View 0 comments">
+                                                    <color key="titleColor" name="LoadingColor"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="commentOnDesign:" destination="qto-th-NSw" eventType="touchUpInside" id="obT-Aw-MLM"/>
+                                                </connections>
+                                            </button>
                                         </subviews>
                                     </stackView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BAQ-UJ-ZMU">
-                                        <rect key="frame" x="0.0" y="138.66666666666663" width="355" height="0.33333333333334281"/>
+                                        <rect key="frame" x="0.0" y="122.66666666666663" width="355" height="0.3333333333333286"/>
                                         <color key="backgroundColor" red="0.75406885150000003" green="0.75408679249999999" blue="0.75407713649999997" alpha="0.5" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="0.5" id="8tO-kw-Mdw"/>
@@ -274,6 +287,7 @@
                 </constraints>
             </tableViewCellContentView>
             <connections>
+                <outlet property="commentBtn" destination="Asy-BI-E8W" id="Pir-AB-TRl"/>
                 <outlet property="dpSkeletonView" destination="mw1-AG-O0b" id="iff-M1-beJ"/>
                 <outlet property="fullName" destination="pSf-TM-jQ0" id="7ec-5I-uxl"/>
                 <outlet property="imageStackBar" destination="SqF-Rh-nL3" id="qAH-kf-ETN"/>
@@ -293,11 +307,11 @@
                 <outletCollection property="nameMaskingViews" destination="GnZ-Vd-zdh" collectionClass="NSMutableArray" id="rwd-XX-CGF"/>
                 <outletCollection property="nameMaskingViews" destination="wPO-Th-lD7" collectionClass="NSMutableArray" id="pFL-DS-Dkr"/>
             </connections>
-            <point key="canvasLocation" x="-4" y="-154.43349753694582"/>
+            <point key="canvasLocation" x="-4" y="-160.34482758620689"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="ellipsis.circle" width="33.333332061767578" height="33.333332061767578"/>
+        <image name="ellipsis" width="33.333332061767578" height="33.333332061767578"/>
         <image name="like" width="366.66665649414062" height="366.66665649414062"/>
         <namedColor name="LoadingColor">
             <color red="0.090000003576278687" green="0.75" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
