--- a/Thred/SalesCell.xib
+++ b/Thred/SalesCell.xib
@@ -8,11 +8,6 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <customFonts key="customFonts">
-        <array key="Nexa W01 Heavy.ttf">
-            <string>NexaW01-Heavy</string>
-        </array>
-    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -26,26 +21,48 @@
                     <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="kSV-q4-va2">
                         <rect key="frame" x="10" y="10" width="278" height="54"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cart" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="ZxL-sb-a9z">
-                                <rect key="frame" x="0.0" y="1.5" width="54" height="52.5"/>
-                                <color key="tintColor" name="LoadingColor"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="M2f-s7-z4c">
+                                <rect key="frame" x="0.0" y="0.0" width="54" height="54"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cart" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="ZxL-sb-a9z">
+                                        <rect key="frame" x="0.0" y="1.5" width="54" height="52.5"/>
+                                        <color key="tintColor" name="LoadingColor"/>
+                                    </imageView>
+                                </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="ZxL-sb-a9z" secondAttribute="height" multiplier="1:1" id="8Y9-fL-xl8"/>
+                                    <constraint firstItem="ZxL-sb-a9z" firstAttribute="top" secondItem="M2f-s7-z4c" secondAttribute="top" id="4qM-Tg-EoY"/>
+                                    <constraint firstAttribute="width" secondItem="M2f-s7-z4c" secondAttribute="height" multiplier="1:1" id="GEm-hT-r7j"/>
+                                    <constraint firstAttribute="trailing" secondItem="ZxL-sb-a9z" secondAttribute="trailing" id="Gk8-X9-o1g"/>
+                                    <constraint firstAttribute="bottom" secondItem="ZxL-sb-a9z" secondAttribute="bottom" id="VfM-tD-3Ha"/>
+                                    <constraint firstItem="ZxL-sb-a9z" firstAttribute="leading" secondItem="M2f-s7-z4c" secondAttribute="leading" id="vmc-dx-eJ3"/>
                                 </constraints>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sales" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XHo-aV-5bU">
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AAk-lm-MZ2">
                                 <rect key="frame" x="64" y="0.0" width="150" height="54"/>
-                                <fontDescription key="fontDescription" name="NexaW01-Heavy" family="NexaW01-Heavy" pointSize="24"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="creditcard.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="P1k-In-KBK">
-                                <rect key="frame" x="224" y="2" width="54" height="50"/>
-                                <color key="tintColor" name="LoadingColor"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SJz-LO-owG">
+                                <rect key="frame" x="224" y="0.0" width="54" height="54"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="EVQ-bo-02t">
+                                        <rect key="frame" x="0.0" y="0.0" width="54" height="54"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="creditcard.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="P1k-In-KBK">
+                                                <rect key="frame" x="0.0" y="2" width="54" height="50"/>
+                                                <color key="tintColor" name="LoadingColor"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="P1k-In-KBK" secondAttribute="height" multiplier="1:1" id="MFP-Bg-8hq"/>
+                                                </constraints>
+                                            </imageView>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="P1k-In-KBK" secondAttribute="height" multiplier="1:1" id="MFP-Bg-8hq"/>
+                                    <constraint firstAttribute="trailing" secondItem="EVQ-bo-02t" secondAttribute="trailing" id="IQP-pW-7NH"/>
+                                    <constraint firstAttribute="bottom" secondItem="EVQ-bo-02t" secondAttribute="bottom" id="c4S-Jk-Cr1"/>
+                                    <constraint firstItem="EVQ-bo-02t" firstAttribute="leading" secondItem="SJz-LO-owG" secondAttribute="leading" id="gWL-fW-P68"/>
+                                    <constraint firstItem="EVQ-bo-02t" firstAttribute="top" secondItem="SJz-LO-owG" secondAttribute="top" id="tiX-QZ-u6K"/>
                                 </constraints>
-                            </imageView>
+                            </view>
                         </subviews>
                     </stackView>
                 </subviews>
@@ -57,6 +74,11 @@
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="salesBtnView" destination="SJz-LO-owG" id="s4X-uy-8cB"/>
+                <outlet property="shoppingCartBtn" destination="ZxL-sb-a9z" id="PBq-1x-4g3"/>
+                <outlet property="shoppingCartBtnView" destination="M2f-s7-z4c" id="xUJ-D2-Oqa"/>
+            </connections>
             <point key="canvasLocation" x="137.68115942028987" y="149.33035714285714"/>
         </tableViewCell>
     </objects>
